Fix overlap of styling

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -5,6 +5,7 @@
 
 .weather-form {
   margin: 10%;
+  clear: both;
 }
 
 #main-header {
@@ -33,6 +34,7 @@
   text-align: center;
   font-weight: bold;
 }
+
 .city, .weather {
   float: right;
   text-align: left;
@@ -53,6 +55,7 @@
 
 .message {
   float: center;
+  clear: both;
   text-align: center;
   margin-top: -160px;
   font-size: 3.5em;
